# SemanticVCS1

./: .gitignore  JUGAADU_Idea_Submission.md  README.md  pipeline.html  test_payload.json
backend/: .dockerignore  Dockerfile  list_qdrant.py  pyproject.toml  requirements.txt  run.py  schema.sql  seed_bad_outcome.py  test_supabase.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  analyze.py  auth.py  backfill.py  health.py  history.py  webhooks.py
backend/app/core/: __init__.py  ast_parser.py  diff_extractor.py  embedder.py  relationship_extractor.py  risk_analyzer.py  similarity.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  neo4j_service.py  qdrant_service.py  redis_service.py  supabase_service.py
backend/app/workers/: __init__.py
backend/model/: README.md
cli/: package.json
cli/src/: api.js  backfill.js  commit.js  passthrough.js  status.js  ui.js
extension/: .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json
extension/src/: extension.ts
extension/src/api/: client.ts  types.ts
extension/src/git/: backfill.ts  diffParser.ts  watcher.ts
extension/src/ui/: diagnostics.ts  hoverProvider.ts  statusBar.ts
extension/src/utils/: logger.ts
